--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -50,7 +50,7 @@
         </div>
     </div> <!-- end form -->
     </div> <!-- end login container -->
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <% if(showRegisterForm != null && showRegisterForm === true) { %>
         <script>
           $('.register-form').show(); $('.login-form, .social-buttons, .form-line').hide();
