updated readme; added google sso

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -47,6 +47,10 @@
           <a href="/auth/twitter">
             <img class="loginBtn" src="img/twitterLoginBtn.png" alt="Sign-In with Twitter">
           </a>
+
+          <a href="/auth/google">
+            <img class="loginBtn" src="img/googleLoginBtn.png" alt="Sign-In with Google">
+          </a>
         </div>
     </div> <!-- end form -->
     </div> <!-- end login container -->
