--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>CareXchange</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="app/images/favicon.ico"/>
   </head>
   <body>
     <div class="login-page">
