--- a/app/views/teams.ejs
+++ b/app/views/teams.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>CareXchange</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="app/images/favicon.ico"/>
     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
   </head>
   <body>
