--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -12,8 +12,10 @@
         <h2>Care<b>X</b>change</h2>
         <div style="margin-top: 18px;">
             <form action="/register" class="register-form" method="post" >
+              <input type="text" name="name" placeholder="name"/>
               <input type="text" name="username" placeholder="username"/>
               <input type="password" name="password" placeholder="password"/>
+              
               <button type="submit">create</button>
               <p class="message">Already registered? <a href="#">Sign In</a></p>
               <% if (errors != null && showRegisterForm != null && showRegisterForm === true) { %>
