--- a/app/views/teams.ejs
+++ b/app/views/teams.ejs
@@ -40,6 +40,9 @@
             <% } %>
           </ul>
         </div> <!-- end team-list -->
+        <div class="user-spill">
+          <& user &>
+        </div>
       </div> <!-- end team -->
 
     </div> <!-- end container -->
